infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pfc.local
      http:
        paths:
          - path: /node/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: springboot-service
                port:
                  number: 8888
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
